Fixed card and text alignment

--- a/src/components/UI/Card.module.css
+++ b/src/components/UI/Card.module.css
@@ -2,13 +2,13 @@
   background: #fff;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.3);
   border-radius: 15px;
-  position: absolute;
+  display: flex;
   align-items: center;
   justify-content: center;
   width: 250px;
   height: 110px;
   text-align: center;
+  margin: auto;
 
-  line-height: 0.7rem;
-  fill-opacity: 0.2;
+  line-height: 2em;
 }
